--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,5 @@
 # Compiled class file
+bin/
 *.class
 
 # Log file
@@ -21,3 +22,17 @@
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
+
+# Ignore Gradle project-specific cache directory
+.gradle
+
+# Ignore Gradle build output directory
+build
+
+# Eclipse
+.settings/
+.classpath
+.project
+
+# VSCode
+.vscode
