--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -11,7 +11,7 @@ jobs:
 
     steps:
       - checkout:
-          path: ~/repo
+          path: ~/repo/maybe
 
       - run:
           name: Generate gradle.lock
@@ -23,12 +23,12 @@ jobs:
             - v1-dependencies-
 
       - run:
-          name: Compile and build
-          command: ./gradlew build -x test
-
-      - run:
           name: Lint
           command: ./gradlew lintGradle sonarlintMain sonarlintTest
+
+      - run:
+          name: Compile and build
+          command: ./gradlew build -x test
 
       - run:
           name: Test
