Add coverage tools
- Add `jacoco` gradle plugin
- Add `Codecov` integration

--- a/build.gradle
+++ b/build.gradle
@@ -1,4 +1,5 @@
 plugins {
+  id 'jacoco'
   id 'java-library'
 
   id 'name.remal.sonarlint' version '1.0.177'
@@ -24,10 +25,12 @@ repositories {
   jcenter()
 }
 
-dependencies {
-  testImplementation 'org.junit.jupiter:junit-jupiter-api:5.5.2'
+def jupiterVersion = '5.5.2'
 
-  testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.5.2'
+dependencies {
+  testImplementation(group: 'org.junit.jupiter', name: 'junit-jupiter-api', version: "$jupiterVersion")
+
+  testRuntimeOnly(group: 'org.junit.jupiter', name: 'junit-jupiter-engine', version: "$jupiterVersion")
 }
 
 test {
@@ -40,5 +43,12 @@ jar {
       'Implementation-Title': project.name,
       'Implementation-Version': project.version
     )
+  }
+}
+
+jacocoTestReport {
+  reports {
+    xml.enabled(true)
+    html.enabled(true)
   }
 }
