--- a/build.gradle
+++ b/build.gradle
@@ -2,6 +2,7 @@ plugins {
   id 'jacoco'
   id 'java-library'
 
+  id 'com.github.joselion.pretty-jupiter' version '0.1.2'
   id 'name.remal.sonarlint' version '1.0.177'
   id 'nebula.lint' version '16.2.3'
 }
@@ -13,6 +14,8 @@ dependencyLocking {
 }
 
 gradleLint {
+  alwaysRun = false
+
   rules += [
     'all-dependency',
     'all-nebula-renames',
@@ -23,11 +26,13 @@ gradleLint {
 
 repositories {
   jcenter()
+  mavenCentral()
 }
 
 def jupiterVersion = '5.5.2'
 
 dependencies {
+  testImplementation(group: 'org.assertj', name: 'assertj-core', version: '3.15.0')
   testImplementation(group: 'org.junit.jupiter', name: 'junit-jupiter-api', version: "$jupiterVersion")
 
   testRuntimeOnly(group: 'org.junit.jupiter', name: 'junit-jupiter-engine', version: "$jupiterVersion")
@@ -35,6 +40,10 @@ dependencies {
 
 test {
   useJUnitPlatform()
+}
+
+prettyJupiter {
+  duration.threshold = 150
 }
 
 jar {
