--- a/build.gradle
+++ b/build.gradle
@@ -8,12 +8,15 @@ plugins {
   id 'jacoco'
   id 'java-library'
 
-  id 'com.github.joselion.pretty-jupiter' version '0.1.2'
-  id 'nebula.lint' version '16.2.3'
+  id 'com.github.joselion.pretty-jupiter' version '1.0.0'
+  id 'nebula.lint' version '16.7.0'
   id 'org.sonarqube' version '2.8'
 }
 
 version = '0.1.0'
+
+sourceCompatibility = '1.8'
+targetCompatibility = '1.8'
 
 dependencyLocking {
   lockAllConfigurations()
@@ -43,7 +46,7 @@ repositories {
   mavenCentral()
 }
 
-def jupiterVersion = '5.5.2'
+def jupiterVersion = '5.6.1'
 
 dependencies {
   testImplementation(group: 'org.assertj', name: 'assertj-core', version: '3.15.0')
