--- a/build.gradle
+++ b/build.gradle
@@ -1,10 +1,16 @@
+buildscript {
+  configurations.classpath {
+    resolutionStrategy.activateDependencyLocking()
+  }
+}
+
 plugins {
   id 'jacoco'
   id 'java-library'
 
   id 'com.github.joselion.pretty-jupiter' version '0.1.2'
-  id 'name.remal.sonarlint' version '1.0.177'
   id 'nebula.lint' version '16.2.3'
+  id 'org.sonarqube' version '2.8'
 }
 
 version = '0.1.0'
@@ -22,6 +28,14 @@ gradleLint {
     'archaic-wrapper',
     'duplicate-dependency-class'
   ]
+}
+
+sonarqube {
+  properties {
+    property 'sonar.projectKey', 'JoseLion_maybe'
+    property 'sonar.organization', 'joselion'
+    property 'sonar.host.url', 'https://sonarcloud.io'
+  }
 }
 
 repositories {
@@ -61,3 +75,5 @@ jacocoTestReport {
     html.enabled(true)
   }
 }
+
+project.tasks["sonarqube"].dependsOn "jacocoTestReport"
