--- a/build.gradle
+++ b/build.gradle
@@ -7,13 +7,15 @@ buildscript {
 plugins {
   id 'jacoco'
   id 'java-library'
+  id 'maven-publish'
 
   id 'com.github.joselion.pretty-jupiter' version '1.0.0'
+  id 'com.jfrog.bintray' version '1.8.5'
   id 'nebula.lint' version '16.7.0'
   id 'org.sonarqube' version '2.8'
 }
 
-version = '0.1.0'
+version = '0.1.0-M1'
 
 sourceCompatibility = '1.8'
 targetCompatibility = '1.8'
@@ -32,6 +34,8 @@ gradleLint {
     'duplicate-dependency-class'
   ]
 }
+
+project.tasks["sonarqube"].dependsOn "jacocoTestReport"
 
 sonarqube {
   properties {
@@ -79,4 +83,83 @@ jacocoTestReport {
   }
 }
 
-project.tasks["sonarqube"].dependsOn "jacocoTestReport"
+tasks.withType(Javadoc) {
+  options.addStringOption('Xwerror', '-quiet')
+}
+
+task sourcesJar(type: Jar, dependsOn: classes) {
+  classifier = 'sources'
+  from sourceSets.main.allSource
+}
+
+task javadocJar(type: Jar, dependsOn: javadoc) {
+    classifier = 'javadoc'
+    from javadoc.destinationDir
+}
+
+bintray {
+  user = 'joselion'
+  key = '2494c77caea0b1ab7865f2feb9a642f177bc8115'
+  publications = ['mavenJava']
+
+  pkg {
+    repo = 'maven'
+    name = 'maybe'
+    licenses = ['Apache-2.0']
+    vcsUrl = 'https://github.com/JoseLion/maybe.git'
+
+    version {
+      name = version
+      desc = "Maybe library for Java - v${version}"
+      released = new Date()
+      vcsTag = version
+    }
+  }
+}
+
+publishing {
+  publications {
+    mavenJava(MavenPublication) {
+      from components.java
+      artifact sourcesJar
+      artifact javadocJar
+
+      groupId 'com.github.joselion'
+      artifactId 'maybe'
+      version version
+
+      pom {
+        name = 'Maybe'
+        description = """\
+          Maybe for Java is not a replacement for java.util.Optional. Instead, it leverages \
+          its benefits to create a functional API that allows to execute/resolve operations \
+          that may throw an exception. The intention is not only to avoid the imperative \
+          try/catch, but also to promote safe exception handling and functional programming in Java
+        """
+        url = 'https://github.com/JoseLion/maybe'
+
+        licenses {
+          license {
+            name = 'The Apache License, Version 2.0'
+            url = 'http://www.apache.org/licenses/LICENSE-2.0.txt'
+            distribution = 'repo'
+          }
+        }
+
+        developers {
+          developer {
+            id = 'JoseLion'
+            name = "Jose Luis Leon"
+            email = 'joseluis5000l@gmail.com'
+          }
+        }
+
+        scm {
+          connection = 'scm:git:git://github.com/JoseLion/maybe.git'
+          developerConnection = 'scm:git:ssh://github.com/JoseLion/maybe.git'
+          url = 'https://github.com/JoseLion/maybe'
+        }
+      }
+    }
+  }
+}
