--- a/build.gradle
+++ b/build.gradle
@@ -7,17 +7,19 @@ buildscript {
 plugins {
   id 'jacoco'
   id 'java-library'
-  id 'maven-publish'
+  id 'maven'
+  id 'signing'
 
   id 'com.github.joselion.pretty-jupiter' version '1.0.0'
   id 'com.jfrog.bintray' version '1.8.5'
+  id 'io.codearte.nexus-staging' version '0.21.2'
   id 'nebula.lint' version '16.7.0'
   id 'org.sonarqube' version '2.8'
 }
 
-def releaseVer = '0.1.0.RC1'
-
-version = releaseVer
+group = 'com.github.joselion'
+archivesBaseName = 'maybe'
+version = '0.1.0'
 
 sourceCompatibility = '1.8'
 targetCompatibility = '1.8'
@@ -94,57 +96,53 @@ task sourcesJar(type: Jar, dependsOn: classes) {
 
 task javadocJar(type: Jar, dependsOn: javadoc) {
     classifier = 'javadoc'
-    from javadoc.destinationDir
+    from javadoc
 }
 
-def maybeDesc = """\
-  Maybe for Java is not a replacement for java.util.Optional. Instead, it leverages \
-  its benefits to create a functional API that allows to execute/resolve operations \
-  that may throw an exception. The intention is not only to avoid the imperative \
-  try/catch, but also to promote safe exception handling and functional programming in Java
-"""
-
-bintray {
-  user = 'joselion'
-  key = '2494c77caea0b1ab7865f2feb9a642f177bc8115'
-  publications = ['mavenJava']
-
-  pkg {
-    repo = 'maven'
-    name = 'com.github.joselion.maybe'
-    licenses = ['Apache-2.0']
-    vcsUrl = 'https://github.com/JoseLion/maybe.git'
-
-    version {
-      name = "${releaseVer}"
-      desc = maybeDesc
-      released = new Date()
-      vcsTag = "${releaseVer}"
-    }
-  }
+artifacts {
+  archives javadocJar, sourcesJar
 }
 
-publishing {
-  publications {
-    mavenJava(MavenPublication) {
-      from components.java
-      artifact sourcesJar
-      artifact javadocJar
+signing {
+  sign configurations.archives
+}
 
-      groupId 'com.github.joselion'
-      artifactId 'maybe'
-      version "${releaseVer}"
+uploadArchives {
+  repositories {
+    mavenDeployer {
+      beforeDeployment {
+        MavenDeployment deployment -> signing.signPom(deployment)
+      }
 
-      pom {
+      repository(url: 'https://oss.sonatype.org/service/local/staging/deploy/maven2/') {
+        authentication(userName: ossrhUsername, password: ossrhPassword)
+      }
+
+      snapshotRepository(url: 'https://oss.sonatype.org/content/repositories/snapshots/') {
+        authentication(userName: ossrhUsername, password: ossrhPassword)
+      }
+
+      pom.project {
         name = 'Maybe'
-        description = maybeDesc
+        packaging = 'jar'
+        description = """\
+          Maybe for Java is not a replacement for java.util.Optional. Instead, it leverages \
+          its benefits to create a functional API that allows to execute/resolve operations \
+          that may throw an exception. The intention is not only to avoid the imperative \
+          try/catch, but also to promote safe exception handling and functional programming in Java
+        """
         url = 'https://github.com/JoseLion/maybe'
+
+        scm {
+          connection = 'scm:git:https://github.com/JoseLion/maybe.git'
+          developerConnection = 'scm:git:ssh://github.com/JoseLion/maybe.git'
+          url = 'https://github.com/JoseLion/maybe'
+        }
 
         licenses {
           license {
             name = 'The Apache License, Version 2.0'
             url = 'http://www.apache.org/licenses/LICENSE-2.0.txt'
-            distribution = 'repo'
           }
         }
 
@@ -154,12 +152,6 @@ publishing {
             name = "Jose Luis Leon"
             email = 'joseluis5000l@gmail.com'
           }
-        }
-
-        scm {
-          connection = 'scm:git:git://github.com/JoseLion/maybe.git'
-          developerConnection = 'scm:git:ssh://github.com/JoseLion/maybe.git'
-          url = 'https://github.com/JoseLion/maybe'
         }
       }
     }
