--- a/build.gradle
+++ b/build.gradle
@@ -7,7 +7,7 @@ buildscript {
 plugins {
   id 'jacoco'
   id 'java-library'
-  id 'maven'
+  id 'maven-publish'
   id 'signing'
 
   id 'com.github.joselion.pretty-jupiter' version '1.0.0'
@@ -18,11 +18,15 @@ plugins {
 }
 
 group = 'com.github.joselion'
-archivesBaseName = 'maybe'
-version = '0.1.0'
+version = '0.1.0.SNAPSHOT'
 
-sourceCompatibility = '1.8'
-targetCompatibility = '1.8'
+sourceCompatibility = JavaVersion.VERSION_1_9
+targetCompatibility = JavaVersion.VERSION_1_9
+
+java {
+  withJavadocJar()
+  withSourcesJar()
+}
 
 dependencyLocking {
   lockAllConfigurations()
@@ -89,40 +93,22 @@ tasks.withType(Javadoc) {
   options.addStringOption('Xwerror', '-quiet')
 }
 
-task sourcesJar(type: Jar, dependsOn: classes) {
-  classifier = 'sources'
-  from sourceSets.main.allSource
-}
+publishing {
+  publications {
+    maven(MavenPublication) {
+      from components.java
 
-task javadocJar(type: Jar, dependsOn: javadoc) {
-    classifier = 'javadoc'
-    from javadoc
-}
+      versionMapping {
+        usage('java-api') {
+          fromResolutionOf('runtimeClasspath')
+        }
 
-artifacts {
-  archives javadocJar, sourcesJar
-}
-
-signing {
-  sign configurations.archives
-}
-
-uploadArchives {
-  repositories {
-    mavenDeployer {
-      beforeDeployment {
-        MavenDeployment deployment -> signing.signPom(deployment)
+        usage('java-runtime') {
+          fromResolutionResult()
+        }
       }
 
-      repository(url: 'https://oss.sonatype.org/service/local/staging/deploy/maven2/') {
-        authentication(userName: ossrhUsername, password: ossrhPassword)
-      }
-
-      snapshotRepository(url: 'https://oss.sonatype.org/content/repositories/snapshots/') {
-        authentication(userName: ossrhUsername, password: ossrhPassword)
-      }
-
-      pom.project {
+      pom {
         name = 'Maybe'
         packaging = 'jar'
         description = """\
@@ -155,5 +141,28 @@ uploadArchives {
         }
       }
     }
+  }
+
+  repositories {
+    maven {
+      def releasesRepoUrl = 'https://oss.sonatype.org/service/local/staging/deploy/maven2/'
+      def snapshotsRepoUrl = 'https://oss.sonatype.org/content/repositories/snapshots/'
+
+      url = version.endsWith('SNAPSHOT') ? snapshotsRepoUrl : releasesRepoUrl
+      credentials(PasswordCredentials) {
+        username = ossrhUsername
+        password = ossrhPassword
+      }
+    }
+  }
+}
+
+signing {
+  sign publishing.publications.maven
+}
+
+javadoc {
+  if(JavaVersion.current().isJava9Compatible()) {
+    options.addBooleanOption('html5', true)
   }
 }
