--- a/build.gradle
+++ b/build.gradle
@@ -48,6 +48,7 @@ sonarqube {
     property 'sonar.projectKey', 'JoseLion_maybe'
     property 'sonar.organization', 'joselion'
     property 'sonar.host.url', 'https://sonarcloud.io'
+    property 'sonar.pullrequest.provider', 'github'
   }
 }
 
