--- a/build.gradle
+++ b/build.gradle
@@ -17,8 +17,11 @@ plugins {
   id 'org.sonarqube' version '2.8'
 }
 
+def isRelease = project.hasProperty('releaseVersion')
+def versionType = isRelease ? 'GA' : 'SNAPSHOT'
+
 group = 'com.github.joselion'
-version = '0.1.0-SNAPSHOT'
+version = "0.1.0-${versionType}"
 
 sourceCompatibility = JavaVersion.VERSION_1_9
 targetCompatibility = JavaVersion.VERSION_1_9
@@ -159,11 +162,5 @@ signing {
 javadoc {
   if(JavaVersion.current().isJava9Compatible()) {
     options.addBooleanOption('html5', true)
-  }
-}
-
-task withGAVersion() {
-  doLast {
-    project.version = version.replace('SNAPSHOT', 'GA')
   }
 }
