--- a/.github/workflows/owner-approve.yml
+++ b/.github/workflows/owner-approve.yml
@@ -11,4 +11,4 @@ jobs:
       - uses: hmarr/auto-approve-action@v2.0.0
         if: github.actor == 'JoseLion'
         with:
-          repo-token: ${{ secrets.GITHUB_TOKEN }}
+          github-token: ${{ secrets.GITHUB_TOKEN }}
