--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,5 +1,8 @@
 version: 2.1
 
+orbs:
+  sonarcloud: sonarsource/sonarcloud@1.0.1
+
 executors:
   common-env:
     working_directory: ~/repo/maybe
@@ -70,9 +73,9 @@ jobs:
 
       - run:
           name: Quality Gate
-          command: |
-            git fetch --no-tags $CIRCLE_REPOSITORY_URL +refs/heads/master:refs/remotes/origin/master
-            ./gradlew sonarqube
+          command: ./gradlew sonarqube
+
+      - sonarcloud/scan
 
       - save_cache:
           paths:
