--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -45,12 +45,6 @@ jobs:
       - setup-env
 
       - run:
-          name: Setup Code Climate
-          command: |
-            curl -L https://codeclimate.com/downloads/test-reporter/test-reporter-latest-linux-amd64 > ./cc-test-reporter
-            chmod +x ./cc-test-reporter
-
-      - run:
           name: Lint Gradle
           command: ./gradlew lintGradle
 
@@ -60,9 +54,7 @@ jobs:
 
       - run:
           name: Test
-          command: |
-            ./cc-test-reporter before-build 
-            ./gradlew test
+          command: ./gradlew test
 
       - run:
           name: Coverage
@@ -83,14 +75,6 @@ jobs:
       - deploy:
           name: Upload reports
           command: bash <(curl -s https://codecov.io/bash)
-
-      - deploy:
-          name: Code Climate reports
-          command: |
-            ./cc-test-reporter format-coverage --input-type jacoco build/reports/jacoco/test/jacocoTestReport.xml
-            ./cc-test-reporter upload-coverage
-          environment:
-            JACOCO_SOURCE_PATH: src/main/java
 
       - store_test_results:
           path: build/test-results
