--- a/build.gradle
+++ b/build.gradle
@@ -13,8 +13,8 @@ plugins {
   id 'com.github.joselion.pretty-jupiter' version '1.3.1'
   id 'com.jfrog.bintray' version '1.8.5'
   id 'io.codearte.nexus-staging' version '0.22.0'
+  id 'name.remal.sonarlint' version '1.2.2'
   id 'nebula.lint' version '16.17.0'
-  id 'org.sonarqube' version '3.1.1'
 }
 
 def isRelease = project.hasProperty('releaseVersion')
@@ -44,17 +44,6 @@ gradleLint {
     'archaic-wrapper',
     'duplicate-dependency-class'
   ]
-}
-
-sonarqube {
-  properties {
-    property 'sonar.projectKey', 'JoseLion_maybe'
-    property 'sonar.organization', 'joselion'
-    property 'sonar.host.url', 'https://sonarcloud.io'
-    property 'sonar.pullrequest.provider', 'github'
-    property 'sonar.junit.reportPaths', "${buildDir}/test-results/junit"
-    property 'sonar.coverage.jacoco.xmlReportPaths', "${jacoco.reportsDir}/test/jacocoTestReport.xml"
-  }
 }
 
 repositories {
