--- a/build.gradle
+++ b/build.gradle
@@ -12,7 +12,7 @@ plugins {
   id 'signing'
 
   id 'com.github.joselion.pretty-jupiter' version '1.3.2'
-  id 'com.github.joselion.strict-null-check' version '1.1.0'
+  id 'com.github.joselion.strict-null-check' version '1.2.1'
   id 'io.codearte.nexus-staging' version '0.22.0'
   id 'name.remal.sonarlint' version '1.2.2'
   id 'nebula.lint' version '16.17.0'
@@ -47,6 +47,14 @@ jar {
       'Implementation-Version': project.version
     )
   }
+}
+
+strictNullCheck {
+  packageJavadoc = """\
+    |@author Jose Luis Leon
+    |@since v1.0.2
+  |"""
+  .stripMargin()
 }
 
 gradleLint {
