--- a/build.gradle
+++ b/build.gradle
@@ -12,6 +12,7 @@ plugins {
   id 'signing'
 
   id 'com.github.joselion.pretty-jupiter' version '1.3.2'
+  id 'com.github.joselion.strict-null-check' version '1.2.1'
   id 'io.codearte.nexus-staging' version '0.22.0'
   id 'name.remal.sonarlint' version '1.2.2'
   id 'nebula.lint' version '16.17.0'
@@ -48,6 +49,14 @@ jar {
   }
 }
 
+strictNullCheck {
+  packageJavadoc = """\
+    |@author Jose Luis Leon
+    |@since v1.0.2
+  |"""
+  .stripMargin()
+}
+
 gradleLint {
   alwaysRun = false
 
@@ -57,6 +66,12 @@ gradleLint {
     'archaic-wrapper',
     'duplicate-dependency-class'
   ]
+}
+
+sonarlint {
+  excludes {
+    message 'java:S4032' // Allow packages only containing `package-info.java`
+  }
 }
 
 checkstyle {
