Add generated package-info.java to jar

--- a/build.gradle
+++ b/build.gradle
@@ -42,6 +42,7 @@ javadoc {
 }
 
 jar {
+  from sourceSets.main.allSource
   manifest {
     attributes(
       'Implementation-Title': project.name,
