--- a/build.gradle
+++ b/build.gradle
@@ -11,10 +11,10 @@ plugins {
   id 'maven-publish'
   id 'signing'
 
-  id 'com.github.joselion.pretty-jupiter' version '1.4.1'
-  id 'com.github.joselion.strict-null-check' version '1.2.1'
-  id 'io.codearte.nexus-staging' version '0.22.0'
-  id 'name.remal.sonarlint' version '1.2.2'
+  id 'com.github.joselion.pretty-jupiter' version '1.5.0'
+  id 'com.github.joselion.strict-null-check' version '1.3.1'
+  id 'io.codearte.nexus-staging' version '0.30.0'
+  id 'name.remal.sonarlint' version '1.5.0'
   id 'nebula.lint' version '17.1.1'
 }
 
@@ -77,7 +77,7 @@ sonarlint {
 }
 
 checkstyle {
-  toolVersion = '8.40'
+  toolVersion = '8.45.1'
   sourceSets = sourceSets
 }
 
@@ -86,14 +86,13 @@ dependencyLocking {
 }
 
 repositories {
-  jcenter()
   mavenCentral()
 }
 
-def jupiterVersion = '5.7.1'
+def jupiterVersion = '5.7.2'
 
 dependencies {
-  testImplementation('org.assertj:assertj-core:3.19.0')
+  testImplementation('org.assertj:assertj-core:3.20.2')
   testImplementation("org.junit.jupiter:junit-jupiter-api:$jupiterVersion")
 
   testRuntimeOnly("org.junit.jupiter:junit-jupiter-engine:$jupiterVersion")
@@ -103,7 +102,7 @@ test {
   useJUnitPlatform()
 
   reports {
-    junitXml.destination = file("$buildDir/test-results/junit")
+    junitXml.outputLocation = file("$buildDir/test-results/junit")
   }
 }
 
@@ -112,13 +111,13 @@ prettyJupiter {
 }
 
 jacoco {
-  toolVersion = '0.8.6'
+  toolVersion = '0.8.7'
 }
 
 jacocoTestReport {
   reports {
-    xml.enabled(true)
-    html.enabled(true)
+    xml.required = true
+    html.required = true
   }
 }
 
