--- a/build.gradle
+++ b/build.gradle
@@ -12,10 +12,10 @@ plugins {
   id 'signing'
 
   id 'com.github.joselion.pretty-jupiter' version '1.6.2'
-  id 'com.github.joselion.strict-null-check' version '1.4.3'
+  id 'com.github.joselion.strict-null-check' version '1.4.4'
   id 'io.codearte.nexus-staging' version '0.30.0'
   id 'name.remal.sonarlint' version '1.5.0'
-  id 'nebula.lint' version '17.1.1'
+  id 'nebula.lint' version '17.7.0'
 }
 
 def isRelease = project.hasProperty('releaseVersion')
@@ -23,7 +23,7 @@ def snapshotSuffix = '-SNAPSHOT'
 def suffix = isRelease ? '' : snapshotSuffix
 
 group = 'com.github.joselion'
-version = "1.6.0$suffix"
+version = "1.6.1$suffix"
 
 sourceCompatibility = JavaVersion.VERSION_1_8
 targetCompatibility = JavaVersion.VERSION_1_8
@@ -74,10 +74,13 @@ sonarlint {
   excludes {
     message 'java:S4032' // Allow packages only containing `package-info.java`
   }
+  includes {
+    message('java:S4266') // "Stream.collect()" calls should not be redundant
+  }
 }
 
 checkstyle {
-  toolVersion = '9.0'
+  toolVersion = '9.3'
   sourceSets = sourceSets
 }
 
@@ -93,10 +96,10 @@ repositories {
   mavenCentral()
 }
 
-def jupiterVersion = '5.7.2'
+def jupiterVersion = '5.8.2'
 
 dependencies {
-  testImplementation('org.assertj:assertj-core:3.20.2')
+  testImplementation('org.assertj:assertj-core:3.22.0')
   testImplementation("org.junit.jupiter:junit-jupiter-api:$jupiterVersion")
 
   testRuntimeOnly("org.junit.jupiter:junit-jupiter-engine:$jupiterVersion")
