[Tech-debt] Migrate to io.github.gradle-nexus.publish-plugin

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -23,7 +23,8 @@ commands:
           command: |
             cp gradle.properties.sample gradle.properties
             sed -i "s/<SIGNING_PASSWORD>/$SIGNING_PASSWORD/g" gradle.properties
-            sed -i "s/<OSSRH_PASSWORD>/$OSSRH_PASSWORD/g" gradle.properties
+            sed -i "s/<NEXUS_USERNAME_TOKEN>/$NEXUS_USERNAME_TOKEN/g" gradle.properties
+            sed -i "s/<NEXUS_PASSWORD_TOKEN>/$NEXUS_PASSWORD_TOKEN/g" gradle.properties
 
       - restore_cache:
           keys:
@@ -93,7 +94,7 @@ jobs:
 
       - run:
           name: Publish to Sonatype Snapshot OSSRH
-          command: ./gradlew publish
+          command: ./gradlew publishToSonatype closeAndReleaseSonatypeStagingRepository
 
       - store-cache
 
@@ -104,12 +105,8 @@ jobs:
       - setup
 
       - run:
-          name: Upload to Sonatype Release OSSRH
-          command: ./gradlew -PreleaseVersion publish
-
-      - run:
-          name: Close and Release to Maven Central
-          command: ./gradlew -PreleaseVersion closeAndReleaseRepository
+          name: Publish to Maven Central
+          command: ./gradlew -PreleaseVersion publishToSonatype closeAndReleaseSonatypeStagingRepository
 
       - store-cache
 
