--- a/gradle.properties.sample
+++ b/gradle.properties.sample
@@ -2,5 +2,5 @@ signing.keyId=031E46E1
 signing.password=<SIGNING_PASSWORD>
 signing.secretKeyRingFile=lion-keyring.asc
 
-ossrhUsername=JoseLion
-ossrhPassword=<OSSRH_PASSWORD>
+sonatypeUsername=<NEXUS_USERNAME_TOKEN>
+sonatypePassword=<NEXUS_PASSWORD_TOKEN>
